layouts/partials/paige/style-first.css
#paige-authors,
#paige-breadcrumbs,
#paige-credit,
#paige-date,
#paige-keywords,
#paige-reading-time,
#paige-series,
#paige-toc,
#paige-collections,
#paige-sections,
#paige-pages,
.paige-authors,
.paige-date,
.paige-date-header,
.paige-keywords,
.paige-reading-time,
.paige-series,
.paige-summary {
    display: none;
}

#paige-title { font-size: min(12vw, 4rem) }

@media (prefers-color-scheme: dark) {
    #sessionize {
        a:hover {
            color: gray !important;
        }
  
        .sz-tab-container,
        .sz-speakers--wall .sz-speaker__name,
        .sz-speakers--wall .sz-speaker__tagline,
        .sz-tab-container .sz-speaker__name,
        .sz-tab-container .sz-speaker__tagline,
        .sz-timezone__name,
        .sz-sessions--list .sz-session__title {
            color: white !important;
        }
        .sz-timezone svg{
            fill: white !important;
        }
    }
}

table { 
    max-width:100vw;
    overflow-y:scroll;
    display: block;
}

